--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@material-tailwind/react": "^2.1.10",
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/vite": "^4.1.6",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.6",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
